--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.notes">
+    package="com.ramji.android.notes">
 
     <application
         android:allowBackup="true"
@@ -9,21 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.ramji.android.notes.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".notesEditor" />
+        <activity android:name="com.ramji.android.notes.notesEditor" />
 
         <!-- Register the TaskContentProvider -->
         <!-- Set name,authorities and exported attributes -->
         <!-- exported = false limits access to this ContentProvider to only this app -->
         <provider
-            android:name=".data.TaskContentProvider"
-            android:authorities="com.example.android.notes"
+            android:name="com.ramji.android.notes.data.TaskContentProvider"
+            android:authorities="com.ramji.android.notes"
             android:exported="false" />
 
     </application>
